<resources>
    <string name="app_name">ProjecteDanielMinguella</string>

    <string name="txtEmail">Email</string>
    <string name="txtPassword">Contrassenya</string>
    <!-- Txt Login -->
    <string name="txtTitle">Títol</string>
    <string name="txtDescription">Descripció</string>
    <string name="txtYear">Any Publicació</string>
    <string name="txtPuntuation">Puntuació</string>
    <string name="txtImg">Imatge</string>
    <!-- Txt -->
    <string name="btnLogin">Loguejar-se</string>
    <string name="btnAdd">Afegir</string>
    <string name="btnInspiration">Inspiració</string>
    <string name="btnShow">Mostrar</string>
    <string name="btnClear">Esborrar</string>
    <!-- Btn Login -->
    <string name="userOk">Usuari loguejat correctement</string>
    <string name="errEmail">El camp email no pot quedar buit</string>
    <string name="errPassword">El camp contrassenya no pot quedar buit</string>

    <!-- Btn -->
    <string name="movieOk">Película afegida correctement</string>
    <string name="errEmpty">Hi ha alun camp buit</string>
    <string name="errEmptyTitle">El camp títol no pot quedar buit</string>
    <string name="errEmptyDescription">El camp descripció no pot quedar buit</string>
    <string name="errEmptyYear">El camp any de publicació no pot quedar buit</string>
    <string name="errEmptyPuntuation">El camp puntuació no pot quedar buit</string>
    <string name="errEmptyImg">El camp URL Imatge no pot quedar buit</string>
    <string name="errPuntuation5">La puntuació només pot anar de l\'1 al 5</string>

    <!-- hint -->
    <string name="goTo">https://www.abc.es/play/cine/peliculas/</string>

</resources>
